--- a/FilmsApp/FilmsApp/FilmCollectionViewCell.xib
+++ b/FilmsApp/FilmsApp/FilmCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,14 +11,70 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CPZ-vI-inu">
-            <rect key="frame" x="0.0" y="0.0" width="198" height="252"/>
+            <rect key="frame" x="0.0" y="0.0" width="335" height="607"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Kja-8H-gVI">
-                <rect key="frame" x="0.0" y="0.0" width="198" height="252"/>
+                <rect key="frame" x="0.0" y="0.0" width="335" height="607"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fth-Sz-0H9">
+                        <rect key="frame" x="10" y="10" width="315" height="425"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zJf-UC-zoJ">
+                                <rect key="frame" x="0.0" y="0.0" width="315" height="425"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zJf-UC-zoJ" firstAttribute="leading" secondItem="Fth-Sz-0H9" secondAttribute="leading" id="Qjj-YU-GOq"/>
+                            <constraint firstAttribute="bottom" secondItem="zJf-UC-zoJ" secondAttribute="bottom" id="You-Rn-WgV"/>
+                            <constraint firstItem="zJf-UC-zoJ" firstAttribute="top" secondItem="Fth-Sz-0H9" secondAttribute="top" id="gX6-Mt-eux"/>
+                            <constraint firstAttribute="trailing" secondItem="zJf-UC-zoJ" secondAttribute="trailing" id="oqT-na-Mic"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yv-Sn-5CC">
+                        <rect key="frame" x="10" y="455" width="315" height="27.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZN-Xe-oJb">
+                        <rect key="frame" x="10" y="492.5" width="315" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Th0-XS-WkW">
+                        <rect key="frame" x="10" y="523" width="315" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="OZN-Xe-oJb" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="2dL-Ea-UJz"/>
+                    <constraint firstItem="Fth-Sz-0H9" firstAttribute="top" secondItem="Kja-8H-gVI" secondAttribute="top" constant="10" id="4Ck-ea-1SO"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Th0-XS-WkW" secondAttribute="bottom" constant="10" id="7hC-3Y-3ic"/>
+                    <constraint firstItem="3yv-Sn-5CC" firstAttribute="top" secondItem="Fth-Sz-0H9" secondAttribute="bottom" constant="20" id="CVx-Al-8oP"/>
+                    <constraint firstAttribute="trailing" secondItem="Th0-XS-WkW" secondAttribute="trailing" constant="10" id="Hh5-eM-zPQ"/>
+                    <constraint firstAttribute="trailing" secondItem="3yv-Sn-5CC" secondAttribute="trailing" constant="10" id="VWg-wp-H3G"/>
+                    <constraint firstItem="Th0-XS-WkW" firstAttribute="top" secondItem="OZN-Xe-oJb" secondAttribute="bottom" constant="10" id="YTG-Oa-xcP"/>
+                    <constraint firstItem="Th0-XS-WkW" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="Z5f-Ad-qEH"/>
+                    <constraint firstItem="3yv-Sn-5CC" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="jGK-gs-FVW"/>
+                    <constraint firstItem="Fth-Sz-0H9" firstAttribute="height" secondItem="Kja-8H-gVI" secondAttribute="height" multiplier="0.7" id="kou-98-hpc"/>
+                    <constraint firstAttribute="trailing" secondItem="Fth-Sz-0H9" secondAttribute="trailing" constant="10" id="orL-fh-eVR"/>
+                    <constraint firstItem="OZN-Xe-oJb" firstAttribute="top" secondItem="3yv-Sn-5CC" secondAttribute="bottom" constant="10" id="ppG-Q8-k2w"/>
+                    <constraint firstItem="Fth-Sz-0H9" firstAttribute="leading" secondItem="Kja-8H-gVI" secondAttribute="leading" constant="10" id="upS-d7-rfd"/>
+                    <constraint firstAttribute="trailing" secondItem="OZN-Xe-oJb" secondAttribute="trailing" constant="10" id="xX2-xS-kzf"/>
+                </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="198" height="252"/>
-            <point key="canvasLocation" x="-102.89855072463769" y="163.39285714285714"/>
+            <size key="customSize" width="335" height="607"/>
+            <point key="canvasLocation" x="-3.6231884057971016" y="282.25446428571428"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
