--- a/FilmsApp/FilmsApp/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Base.lproj/Main.storyboard
@@ -34,72 +34,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilmCell" id="LcA-n5-zfF" customClass="FilmCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="LcA-n5-zfF" customClass="FilmCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
                                         <rect key="frame" x="36.5" y="0.0" width="301" height="655"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZW0-IE-uE7">
                                             <rect key="frame" x="0.0" y="0.0" width="301" height="655"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w07-5J-1E1">
-                                                    <rect key="frame" x="10" y="10" width="281" height="436"/>
-                                                    <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NTF-P2-0I1">
-                                                            <rect key="frame" x="0.0" y="0.0" width="281" height="436"/>
-                                                        </imageView>
-                                                    </subviews>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                    <constraints>
-                                                        <constraint firstItem="NTF-P2-0I1" firstAttribute="leading" secondItem="w07-5J-1E1" secondAttribute="leading" id="0DR-ei-cBm"/>
-                                                        <constraint firstAttribute="trailing" secondItem="NTF-P2-0I1" secondAttribute="trailing" id="Jos-dJ-SHK"/>
-                                                        <constraint firstAttribute="bottom" secondItem="NTF-P2-0I1" secondAttribute="bottom" id="KUd-xq-m36"/>
-                                                        <constraint firstItem="NTF-P2-0I1" firstAttribute="top" secondItem="w07-5J-1E1" secondAttribute="top" id="vgc-bX-WI6"/>
-                                                    </constraints>
-                                                </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pf5-MC-bpo">
-                                                    <rect key="frame" x="10" y="466" width="281" height="27.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Usl-Su-D48">
-                                                    <rect key="frame" x="10" y="503.5" width="281" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAL-ph-iFY">
-                                                    <rect key="frame" x="10" y="534.5" width="281" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Usl-Su-D48" firstAttribute="leading" secondItem="ZW0-IE-uE7" secondAttribute="leading" constant="10" id="0qM-cP-Fl0"/>
-                                                <constraint firstItem="w07-5J-1E1" firstAttribute="top" secondItem="ZW0-IE-uE7" secondAttribute="top" constant="10" id="1T5-lN-cdx"/>
-                                                <constraint firstItem="cAL-ph-iFY" firstAttribute="top" secondItem="Usl-Su-D48" secondAttribute="bottom" constant="10" id="9Bc-TZ-zdC"/>
-                                                <constraint firstItem="w07-5J-1E1" firstAttribute="leading" secondItem="ZW0-IE-uE7" secondAttribute="leading" constant="10" id="ERv-zO-Srl"/>
-                                                <constraint firstAttribute="trailing" secondItem="Usl-Su-D48" secondAttribute="trailing" constant="10" id="RvE-hd-jQE"/>
-                                                <constraint firstItem="Usl-Su-D48" firstAttribute="top" secondItem="pf5-MC-bpo" secondAttribute="bottom" constant="10" id="UcX-id-kmM"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="cAL-ph-iFY" secondAttribute="bottom" constant="10" id="Ui6-TD-LHR"/>
-                                                <constraint firstItem="pf5-MC-bpo" firstAttribute="top" secondItem="w07-5J-1E1" secondAttribute="bottom" constant="20" id="XKu-Pr-BUr"/>
-                                                <constraint firstAttribute="trailing" secondItem="pf5-MC-bpo" secondAttribute="trailing" constant="10" id="m3W-oz-jS6"/>
-                                                <constraint firstItem="cAL-ph-iFY" firstAttribute="leading" secondItem="ZW0-IE-uE7" secondAttribute="leading" constant="10" id="mAY-Ek-BD7"/>
-                                                <constraint firstAttribute="trailing" secondItem="w07-5J-1E1" secondAttribute="trailing" constant="10" id="mU2-MT-k5n"/>
-                                                <constraint firstItem="w07-5J-1E1" firstAttribute="height" secondItem="ZW0-IE-uE7" secondAttribute="height" multiplier="0.666" id="nlO-yW-HwW"/>
-                                                <constraint firstItem="pf5-MC-bpo" firstAttribute="leading" secondItem="ZW0-IE-uE7" secondAttribute="leading" constant="10" id="r5k-gN-rdx"/>
-                                                <constraint firstAttribute="trailing" secondItem="cAL-ph-iFY" secondAttribute="trailing" constant="10" id="vSQ-19-7eN"/>
-                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="301" height="655"/>
-                                        <connections>
-                                            <outlet property="containerView" destination="w07-5J-1E1" id="375-Nu-4N4"/>
-                                            <outlet property="filmTitleLabel" destination="pf5-MC-bpo" id="5TO-VS-iho"/>
-                                            <outlet property="posterImageView" destination="NTF-P2-0I1" id="oue-5m-buC"/>
-                                            <outlet property="ratingLabel" destination="cAL-ph-iFY" id="A5H-3G-9MD"/>
-                                            <outlet property="yearLabel" destination="Usl-Su-D48" id="Jly-P9-9cd"/>
-                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
