--- a/FilmsApp/FilmsApp/FilmCollectionViewCell.xib
+++ b/FilmsApp/FilmsApp/FilmCollectionViewCell.xib
@@ -11,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilmCell" id="CPZ-vI-inu" customClass="FilmCollectionViewCell" customModule="FilmsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="223" height="483"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Kja-8H-gVI">
-                <rect key="frame" x="0.0" y="0.0" width="300" height="600"/>
+                <rect key="frame" x="0.0" y="0.0" width="223" height="483"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fth-Sz-0H9">
-                        <rect key="frame" x="10" y="10" width="280" height="420"/>
+                        <rect key="frame" x="10" y="10" width="203" height="338"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zJf-UC-zoJ">
-                                <rect key="frame" x="0.0" y="0.0" width="280" height="420"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zJf-UC-zoJ">
+                                <rect key="frame" x="0.0" y="0.0" width="203" height="338"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -33,20 +33,20 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yv-Sn-5CC">
-                        <rect key="frame" x="10" y="450" width="280" height="27.5"/>
+                        <rect key="frame" x="10" y="368" width="203" height="27.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZN-Xe-oJb">
-                        <rect key="frame" x="10" y="487.5" width="280" height="20.5"/>
+                        <rect key="frame" x="10" y="405.5" width="203" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Th0-XS-WkW">
-                        <rect key="frame" x="10" y="518" width="280" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="10" y="436" width="203" height="20.5"/>
+                        <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -69,7 +69,7 @@
                 </constraints>
             </collectionViewCellContentView>
             <color key="backgroundColor" red="0.8974346662068996" green="1" blue="0.78389688118559675" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-            <size key="customSize" width="271" height="620"/>
+            <size key="customSize" width="194" height="503"/>
             <connections>
                 <outlet property="containerView" destination="Fth-Sz-0H9" id="jdh-Cc-iwz"/>
                 <outlet property="filmTitleLabel" destination="3yv-Sn-5CC" id="Vgh-XY-Zgz"/>
@@ -77,7 +77,7 @@
                 <outlet property="ratingLabel" destination="Th0-XS-WkW" id="VjI-OK-xJ3"/>
                 <outlet property="yearLabel" destination="OZN-Xe-oJb" id="skM-bG-wIL"/>
             </connections>
-            <point key="canvasLocation" x="-50.000000000000007" y="285.9375"/>
+            <point key="canvasLocation" x="-106.5217391304348" y="246.76339285714283"/>
         </collectionViewCell>
     </objects>
     <resources>
