--- a/FilmsApp/FilmsApp/Storyboards/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Storyboards/Base.lproj/Main.storyboard
@@ -125,17 +125,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="RUR-mS-PIt" secondAttribute="height" multiplier="1:1" id="g3h-aE-1fQ"/>
+                                                        <constraint firstAttribute="height" constant="128" id="Ef4-GT-26a"/>
+                                                        <constraint firstAttribute="width" secondItem="RUR-mS-PIt" secondAttribute="height" multiplier="1:1" id="Qej-BF-Pfq"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="height" secondItem="Bcx-JM-kQD" secondAttribute="height" id="X8w-Xy-vCM"/>
-                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="top" secondItem="Bcx-JM-kQD" secondAttribute="top" id="oqh-ed-dEc"/>
-                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="leading" secondItem="Bcx-JM-kQD" secondAttribute="leading" id="pLF-LC-aw2"/>
+                                                <constraint firstAttribute="height" secondItem="RUR-mS-PIt" secondAttribute="height" id="BD2-BP-YoH"/>
+                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="leading" secondItem="Bcx-JM-kQD" secondAttribute="leading" id="uiz-sr-usp"/>
+                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="top" secondItem="Bcx-JM-kQD" secondAttribute="top" id="xlQ-jK-oR0"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
